--- a/RFIDWSProxy.csproj
+++ b/RFIDWSProxy.csproj
@@ -32,11 +32,12 @@
     <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>true</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -66,8 +67,8 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RFIDListener.cs" />
-    <Compile Include="Utils\Ini.cs" />
+    <Compile Include="Listeners\IListener.cs" />
+    <Compile Include="Listeners\RFIDListener.cs" />
     <Compile Include="RFIDService.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -82,7 +83,7 @@
     </Compile>
     <Compile Include="Utils\Log.cs" />
     <Compile Include="Utils\Settings.cs" />
-    <Compile Include="WebSocketListener.cs" />
+    <Compile Include="Listeners\WebSocketListener.cs" />
     <Compile Include="Z2SDK\ZPort.cs" />
     <Compile Include="Z2SDK\ZReader.cs" />
     <Compile Include="Z2SDK\ZRetrConst.cs" />
